# openmc-src-mesh-mapping

./: CMakeLists.txt  src_to_mesh.cpp
mesh_spatial/: geometry.xml  materials.xml  settings.xml
spherical_src/: settings.xml  tallies.xml
